# codex-manager

./: .coverage  .gitignore  CHANGELOG.md  CODEX_MANAGER_SPEC.md  README.md  ROADMAP.md  coverage.xml  pyproject.toml
.github/workflows/: publish.yml
src/codex_manager/: __init__.py  account_status.py  args.py  backup.py  cli.py  cloud.py  config.py  cooldown.py  credentials.py  doctor.py  inventory.py  list_backups.py  normalize.py  profile.py  prune.py  prune_backups.py  recommend.py  registry.py  remove.py  restore.py  rich_utils.py  status.py  sync.py  ui.py  use_account.py  utils.py
tests/: test_account_status_coverage.py  test_account_status_more2.py  test_args_cli.py  test_args_cli_extra.py  test_backup.py  test_backup2.py  test_cli_coverage.py  test_cli_coverage_2.py  test_cli_coverage_3.py  test_cli_coverage_4.py  test_cli_coverage_5.py  test_cli_coverage_6.py  test_cli_coverage_7.py  test_cli_coverage_8.py  test_cli_coverage_extra.py  test_cli_coverage_more.py  test_cloud.py  test_config.py  test_cooldown.py  test_cooldown2.py  test_doctor.py  test_doctor2.py  test_dry_run_coverage.py  test_inventory.py  test_list_backups.py  test_list_backups2.py  test_list_backups3.py  test_list_backups_coverage.py  test_next_gen_upgrade.py  test_normalize.py  test_prune_backups.py  test_recommend.py  test_recommend2.py  test_registry_coverage_more.py  test_registry_dry_run_coverage.py  test_remove.py  test_restore.py  test_restore2.py  test_status.py  test_status2.py  (+4 more)
